--- a/wiki/Benchmarks.wiki
+++ b/wiki/Benchmarks.wiki
@@ -4,7 +4,7 @@ control:
 "Lx : ECMAScript Lexical Analyzer with a lex like API."
  jsyn *26ms*
 
- * [http://mihai.bazon.net/projects/javascript-syntax-highlighting-engine] 167ms (6.4 times slower)
+ * [http://mihai.bazon.net/projects/javascript-syntax-highlighting-engine] *167ms* (6.4 times slower)
 
  * [http://www.webessence.nl/projects/highlight/index.html]
 
